Fix: Renamed 'dynmic' - 'a' wasn't for performance!😅

--- a/static/dynamic-keyboard.html
+++ b/static/dynamic-keyboard.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" />
     <link rel="stylesheet" href="https://unpkg.com/keyboard-css@1.2.4/dist/css/main.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="/static/css/dynamc-keyboard.css">
+    <link rel="stylesheet" href="/static/css/dynamic-keyboard.css">
     
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="text/javascript" src="/static/js/board-controller.js"></script>
@@ -48,9 +48,9 @@
                 <select name="btnEvent">
                     <option value="">Choose an event</option>
                     <option value="sendKey">Send Key</option>
-                    <option value="openUrl">Send Open URL</option>
-                    <option value="notepad">Open Notepad</option>
-                    <option value="cmd">Open CMD</option>
+                    <option value="openUrl">Open URL</option>
+                    <option value="notepad">Notepad</option>
+                    <option value="cmd">CMD</option>
                 </select>
 
                 <input type="text" placeholder="Enter value for above event" name="btnValue">
