--- a/static/dynamic-keyboard.html
+++ b/static/dynamic-keyboard.html
@@ -13,6 +13,7 @@
     
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="text/javascript" src="/static/js/board-controller.js"></script>
+    <script type="text/javascript" src="/static/js/re-arrange-keys.js"></script>
 
 </head>
 
@@ -27,11 +28,14 @@
 
                 <div class="control-button" data-call-func="switchFullScreen">
                     <i class="material-symbols-outlined">fullscreen</i>
-                    <!-- fullscreen_exit -->
                 </div>
 
                 <div class="control-button" data-toggle-section="add-new-button">
                     <i class="material-symbols-outlined">new_window</i>
+                </div>
+
+                <div class="control-button" data-call-func="switchKeysEditorMode">
+                    <i class="material-symbols-outlined">lock</i>
                 </div>
             </div>
         </div>
@@ -42,9 +46,7 @@
             <h2>Add Button <i class="material-symbols-outlined" data-toggle-section="default-keyboard">close</i></h2>
 
             <form class="form-input" id="createNewButton">
-                <input type="text" placeholder="Enter icon name" name="btnIcon">
-                <p><a href="https://fonts.google.com/icons" target="_blank">Click here</a> to view icons list</p>
-
+                
                 <select name="btnEvent">
                     <option value="">Choose an event</option>
                     <option value="sendKey">Send Key</option>
@@ -53,20 +55,28 @@
                     <option value="cmd">CMD</option>
                 </select>
 
-                <input type="text" placeholder="Enter value for above event" name="btnValue">
+                <input type="text" placeholder="Enter value e.g: rwin+e" name="btnValue">
+
+                <input type="text" placeholder="Enter icon name" name="btnIcon">
+                <p><a href="https://fonts.google.com/icons" target="_blank">Click here</a> to view icons list</p>
 
                 <button type="submit">Create</button>
             </form>
         </section>
 
-        <section id="default-keyboard" class="keyboard-section">
+        <section id="default-keyboard" class="keyboard-section" ondragover="allowDrop(event)" ondrop="drop(event)">
 
             <!-- #template
-            <button data-command="sendKey>ctrl+c" class="kbc-button kbc-button-lg">
+            <buttons data-command="sendKey>ctrl+c" class="kbc-button kbc-button-lg">
                 <i class="material-symbols-outlined">content_copy</i>
             </button> -->
 
         </section>
+
+        <div id="dropForDelete" ondragover="allowDrop(event)" ondrop="drop(event)">
+            <i class="material-symbols-outlined">delete</i>
+            <p>Drop here to delete this button</p>
+        </div>
     </main>
 </body>
 
