Feature: Launch virtual kayboard of phone

--- a/static/dynamic-keyboard.html
+++ b/static/dynamic-keyboard.html
@@ -80,6 +80,9 @@
             <p>Drop here to delete this button</p>
         </div>
     </main>
+
+    <!-- Textarea to launch v-keyboard of your phone -->
+    <textarea oninput="sendKeyboardEvent(event)" id="hiddenKeyBoard" autocapitalize="none" autocomplete="off" autocorrect="off" spellcheck="false"></textarea>
 </body>
 
 </html>
