Fix: Minor changes

--- a/static/index.html
+++ b/static/index.html
@@ -8,9 +8,8 @@
     <link rel="icon" href="/static/icons/favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" />
     <link rel="stylesheet" href="https://unpkg.com/keyboard-css@1.2.4/dist/css/main.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="stylesheet" href="/static/css/dynamic-keyboard.css">
-    <script type="text/javascript" src="/static/js/board-controller.js?v=1"></script>
+    <link rel="stylesheet" href="/static/css/main-board.css">
+    <script type="text/javascript" src="/static/js/board-controller.js?v=1.0"></script>
     <script type="text/javascript" src="/static/js/re-arrange-keys.js"></script>
 
 </head>
@@ -20,8 +19,8 @@
         <div class="control-board">
             <div class="control-buttons">
                 <div class="control-board-title">
-                    <h1>Default</h1>
-                    <p><i class="material-symbols-outlined online">toll</i>Keyboard &bullet; v1.0.2</p>
+                    <h1>Virtual Keyboard</h1>
+                    <p><i class="material-symbols-outlined online">toll</i>Keyboard &bullet; v1.0.0</p>
                 </div>
 
                 <div class="control-button" data-call-func="switchFullScreen">
